crates/shep-cli/src/lookout/frames/snapshots/shep__lookout__frames__tests__lambs_unknown.snap
---
source: crates/shep-cli/src/lookout/frames/mod.rs
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                                                            6 in the flock
                                                                                                                        
host  load  ██░░░░░░░░ 2.31 4.10 3.88 / 10 cores     host mem  ████░░░░░░ 12.4G / 32.0G     1 errored · 0 parked   floc…
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                        
  ID    NAME        STATUS           PID      RESTARTS  EXIT       CPU     MEM       UPTIME    FOLD        SMIT         
   ██ FLOCK                                                                                                             
  2     api         errored          -        14        1          -       -         1h 18m    edge        -            
  3     billing-r…  waiting-restart  -        3         1          -       -         1h 19m    -           -            
  4     cron        stopped          -        0         SIGTERM    -       -         1h 21m    -           -            
  5     metrics     online           48240    0         -          0.4%    11.0M     1h 32m    -           -            
  0     web         online           48211    0         -          3.4%    182.0M    1h 25m    edge        -            
  1     web         online           48212    0         -          2.9%    178.0M    1h 26m    edge        -            
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ██ SHEEP 4  cron   stopped   pid -   restarts 0   uptime 1h 21m   cpu -   mem -   fold -                               
lambs  this sheep is not running, so there is no tree to walk                                                           
out  /home/ada/.shep/logs/cron-4-out.log   │   err  /home/ada/.shep/logs/cron-4-err.log                                 
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ██ BLEATS cron  … 1 earlier line not shown                                                                             
out  GET /healthz 200 3ms                                                                                               
out  GET /v1/orders 200 44ms                                                                                            
out  POST /v1/orders 201 88ms                                                                                           
out  GET /v1/orders/8821 200 9ms                                                                                        
out  connection pool: 14/50 in use                                                                                      
q quit   j/k select   / filter   F folds   x stop   R restart   L reload   s settings   e edit   * your… control enabled
