crates/shep-cli/src/lookout/frames/snapshots/shep__lookout__frames__tests__mem_ceiling.snap
---
source: crates/shep-cli/src/lookout/frames/mod.rs
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                                                                                          3 in the flock
                                                                                                                                                      
host  load  ██░░░░░░░░ 2.31 4.10 3.88 / 10 cores     host mem  ████░░░░░░ 12.4G / 32.0G     0 errored · 0 parked   flock cpu 6.6%       ▁█   flock me…
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                                                      
  ID    NAME        STATUS           PID      RESTARTS  EXIT       CFG   CPU 20s     CPU     MEM/CEIL    MEM       UPTIME    FOLD        SMIT         
   ██ FLOCK                                                                                                                                           
  2     batch-wor…  online           48303    0         -          -              ▃  1.0%    ░░░░░░░░░░  64.0M     1h 28m    -           -            
  0     web-headr…  online           48300    0         -          -              ▄  1.7%    ███░░░░░░░  128.0M    1h 25m    edge        -            
  1     web-hot     online           48301    0         -          -              █  3.9%    █████████░  480.0M    1h 26m    edge        -            
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ██ SHEEP 1  web-hot   online   pid 48301   restarts 0   uptime 1h 26m   cpu 3.9%   mem 480.0M   fold edge                                            
lambs  not read yet                                                                                                                                   
out  /home/ada/.shep/logs/web-hot-1-out.log   │   err  /home/ada/.shep/logs/web-hot-1-err.log                                                         
                                                                                                                                                      
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ██ BLEATS web-hot  … 1 earlier line not shown                                                                                                        
out  GET /healthz 200 3ms                                                                                                                             
out  GET /v1/orders 200 44ms                                                                                                                          
out  POST /v1/orders 201 88ms                                                                                                                         
out  GET /v1/orders/8821 200 9ms                                                                                                                      
out  connection pool: 14/50 in use                                                                                                                    
q quit   j/k select   / filter   F folds   x stop   R restart   L reload   s settings   e edit   * yours   ! parked                    control enabled
