crates/shep-cli/src/lookout/frames/snapshots/shep__lookout__frames__tests__secrets.snap
---
source: crates/shep-cli/src/lookout/frames/mod.rs
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                                                                                                    6 in the flock
                                                                                                                                                                
 ██ SECRETS   flock-wide values a Flockfile refers to and never carries                                                                                         
store $SHEP_HOME/secrets.json · not encrypted · never printed to a log, never carried in a bleat · read at spawn, not now                                       
reveal  [secrets] allow_read = true in shep.toml · change  lookout.allow_control = true                                                                         
READ BY as of the roll, read 3m 4s ago                                                                                                                          
all  ci  [production]                                                                                                         3 environments in this store · ←/→
  KEY                         VALUE                         IN FORCE      SET IN                READ BY               LANDS                                     
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  ▾ operator ×2 · you set these                                                                                                                                 
  DB_PASSWORD                 hunter2-not-really            production    1 of 3 · production   1 (1 online)          visible 10s ██████████                    
  ELSEWHERE_ONLY              not set here                  -             1 of 3 · ci           -                     -                                         
  + new key                                                                                                                                                     
  ▾ vercel (dog) ×1 · pushed by a provider · read-only here                                                                                                     
  vercel/API_TOKEN            ██████ 6 bytes                production    1 of 3 · production   -                     -                                         
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
FOCUSED  DB_PASSWORD                                                                    WHO READS IT  DB_PASSWORD                                               
the value leaves the screen after 10s. nothing records that you looked.                 █ catcher   online, was given a value at spawn                          
the store is 0600: anyone who can reveal can also delete a log.                                                                                                 
the system clipboard is readable by every process on the desktop.                                                                                               
set in production · length 18 bytes · named by 1 of the flock                           named in env, args, out_file or err_file                                
esc/S close   ←/→ tab   z collapse   v reveal for 10s   ↵ set a value   D delete   y copy   q quit                                               control enabled
