crates/shep-cli/src/lookout/frames/snapshots/shep__lookout__frames__tests__settings_fresh.snap
---
source: crates/shep-cli/src/lookout/frames/mod.rs
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                                                            6 in the flock
                                                                                                                        
  [daemon]                                                                                                              
> log_level        warn                            the default  needs shep daemon reload                                
  log_json         false                           the default  needs shep daemon reload                                
  socket           /home/ada/.shep/run/shep.sock   the default  needs the shepherd stopped and started                  
  max_cron_sleep   not set                         the default  needs shep daemon reload                                
                                                                                                                        
  [whistle]                                                                                                             
  allow_control    false                           the default  needs shep whistle restarted                            
                                                                                                                        
  [style]                                                                                                               
  level            full                            the default  the next command reads it                               
                                                                                                                        
  [dogs]                                                                                                                
  space arms, Enter applies; a dog needs no reload                                                                      
  NAME                                                                IN FILE  SOURCE                    RUNNING        
  bark                                                                no       built-in                  not running    
  metrics                                                             no       built-in                  not running    
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
esc/s close   j/k select   g/G first/last   r refresh   space cycle   enter apply   q quit               control enabled
